have moderate confidence on scanner of the raw version

--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -277,7 +277,7 @@
               <hr class="break_style1">
             </div>
             <div id="other_infos">
-              <div id="new-record"><img src="./final_icon/Group 20.png" alt="cancel" onclick="add_record()"></div>
+              <div id="new-record" onclick="add_record()"><img src="./final_icon/Group 20.png" alt="cancel"></div>
               <div id="record-flexbox">
                 <div class="record-style">
                   <input class="record-name" type="text" name="name_0" placeholder="品項">
