--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -511,7 +511,13 @@
             <div id="__Page2__cardName">
               <p id="__Page2__cardNameText">討債卡</p>
             </div>
-            <div id="__Page2__cardStar"></div>
+            <div id="__Page2__cardStar">
+			  <img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+			  <img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+			  <img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+			  <img class="__Page2__starimg" src="./midterm_icon/star_2.png">
+			  <img class="__Page2__starimg" src="./midterm_icon/star_3.png">
+			</div>
             <div id="__Page2__imgUpload">
               <div id="__Page2__cameraImg"></div>
               <p id="__Page2__uploadText">上傳圖片</p>
@@ -893,8 +899,8 @@
 			  <p id="__Page47__informtext2" class="__Page62__informtext">快點到卡牌冊裡面查看吧!</p>
 			  <div id="__Page62__informbutton">
 			    <div id="__Page62__setting">
-				  <p class="__Page47__handsetting" id="__Page47__handsetting" onclick="change_page(8);page47__restore();">讓我看看</p>
-				  <p class="__Page47__handsetting" id="__Page47__luckysetting" onclick="change_page(0);page47__restore();">我知道了</p>
+				  <p class="__Page47__handsetting" id="__Page47__handsetting" onclick="change_page(0);page47__restore();">我知道了</p>
+				  <p class="__Page47__luckysetting" id="__Page47__luckysetting" onclick="change_page(8);page47__restore();">讓我看看</p>
 				</div>
 			  </div>
             </div>
@@ -917,7 +923,13 @@
 				  <div id="__Page47__cardfrontName" class="__Page47__cardName">
 					<p id="__Page47__cardfrontNameText" class="__Page47__cardNameText">討債卡</p>
 				  </div>
-				  <div id="__Page2__cardStar"></div>
+				  <div id="__Page47__cardStar">
+				    <img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+					<img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+					<img class="__Page2__starimg" src="./midterm_icon/star_1.png">
+					<img class="__Page2__starimg" src="./midterm_icon/star_2.png">
+					<img class="__Page2__starimg" src="./midterm_icon/star_3.png">
+				  </div>
 				  <div id="__Page47__imgUpload" class="__Page47__imgUpload">
 				    <div id="__Page47__frontcameraImg" class="__Page47__cameraImg"></div>
 				    <p id="__Page47__uploadText" class="__Page47__uploadText">上傳圖片</p>
