--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="external/adapter.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="external/instascan.js"></script>
+    <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
   </head>
   <body>
     <div id="__fullscreen">
@@ -586,7 +588,7 @@
           <p id="__Page3__title">發送卡牌</p>
         </div>
         <div id="__Page3__card__container">
-          <div id="__Page3__car__bar"></div>
+          <div id="__Page3__card__bar"></div>
         </div>
         <div id="__Page3__send__container">
           <div id="__Page3__send__bar">
@@ -949,8 +951,7 @@
       </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="./app_register.js"></script>
-    <script src="./app_BeiBei.js"></script>
+    <script src="./app_Split.js"></script>
     <script type="text/javascript" src="./mainpage.js"></script>
     <script type="text/javascript" src="./Webapp.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
