add id of invite link and update pkg-lock

--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -256,7 +256,7 @@
             <div id="__Page16__invitelink__bar">
               <p class="__Page16__inviteid">邀請連結</p><img class="__Page16__linkimg" src="./midterm_icon/link.png" alt="連結" onclick="copy_inviteid()">
             </div>
-            <p class="__Page16__inviteid">#1s1s3fewg</p>
+            <p class="__Page16__inviteid" id="__Page16__inviteid">#1s1s3fewg</p>
           </div>
         </div>
         <div id="__Page16__team__container">
