minor modification of mainpage

--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -523,8 +523,8 @@
 			  <img class="__Page2__starimg" src="./midterm_icon/star_3.png">
 			</div>
             <div id="__Page2__imgUpload">
-              <div id="__Page2__cameraImg"></div>
-              <p id="__Page2__uploadText">上傳圖片</p>
+              <div id="__Page2__cameraImg" class="invisible"></div>
+              <p id="__Page2__uploadText" class="invisible">上傳圖片</p>
             </div>
             <div id="__Page2__spec">
               <p id="__Page2__specText">功能說明</p>
