--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -270,7 +270,7 @@
         <div id="__Page16__invite__container">
           <div id="__Page16__invite__bar" onclick="add_person()">
             <div id="__Page16__invitelink__bar">
-              <p class="__Page16__inviteid">邀請連結</p><img class="__Page16__linkimg" src="./midterm_icon/link.png" alt="連結" onclick="copy_inviteid()">
+              <p class="__Page16__inviteid" id="__Page16__inviteid">邀請連結</p><img class="__Page16__linkimg" src="./midterm_icon/link.png" alt="連結" onclick="copy_inviteid()">
             </div>
             <p class="__Page16__inviteid">#1s1s3fewg</p>
           </div>
@@ -533,8 +533,8 @@
             </div>
             <div id="__Page2__cardStar"></div>
             <div id="__Page2__imgUpload">
-              <div id="__Page2__cameraImg"></div>
-              <p id="__Page2__uploadText">上傳圖片</p>
+              <div class="invisible" id="__Page2__cameraImg"></div>
+              <p class="invisible" id="__Page2__uploadText">上傳圖片</p>
             </div>
             <div id="__Page2__spec">
               <p id="__Page2__specText">功能說明</p>
